# mesa-frames

./: .codespellignore  .env.test  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  _optional_dependencies_hook.py  agent.py  index.html  mkdocs.yml  model.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml  space.py
.github/: presubmit.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: automerge-precommit-autoupdate.yml  benchmarks.yml  build.yml  docs-gh-pages.yml  docs-preview-dispatch.yml  issues-dependency-check.yml  mkdocs-gh-pages.yml  presubmit.yml  publish.yml  sync_coderabbit.yml
api/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
api/.doctrees/: index.doctree
api/.doctrees/reference/: datacollector.doctree  model.doctree
api/_modules/: index.html
api/_sources/reference/: mesa_frames.DataCollector.__init__.rst.txt  mesa_frames.DataCollector.conditional_collect.rst.txt  mesa_frames.Model.__init__.rst.txt  mesa_frames.Model.reset_randomizer.rst.txt  mesa_frames.Model.seed.rst.txt  mesa_frames.Model.step.rst.txt  model.rst.txt
api/reference/: datacollector.html  mesa_frames.DataCollector.__init__.html  mesa_frames.DataCollector.collect.html  mesa_frames.DataCollector.conditional_collect.html  mesa_frames.DataCollector.data.html  mesa_frames.DataCollector.flush.html  mesa_frames.DataCollector.seed.html  mesa_frames.Model.__init__.html  mesa_frames.Model.reset_randomizer.html  mesa_frames.Model.run_model.html  mesa_frames.Model.seed.html  mesa_frames.Model.sets.html  mesa_frames.Model.space.html  mesa_frames.Model.step.html  mesa_frames.Model.steps.html  model.html
api/reference/agents/: index.html  mesa_frames.AgentSet.__add__.html  mesa_frames.AgentSet.__contains__.html  mesa_frames.AgentSet.__getitem__.html  mesa_frames.AgentSet.__iadd__.html  mesa_frames.AgentSet.__init__.html  mesa_frames.AgentSet.__isub__.html  mesa_frames.AgentSet.__iter__.html  mesa_frames.AgentSet.__len__.html  mesa_frames.AgentSet.__repr__.html  mesa_frames.AgentSet.__reversed__.html  mesa_frames.AgentSet.__sub__.html  mesa_frames.AgentSet.active_agents.html  mesa_frames.AgentSet.add.html  mesa_frames.AgentSet.contains.html  mesa_frames.AgentSet.copy.html  mesa_frames.AgentSet.df.html  mesa_frames.AgentSet.discard.html  mesa_frames.AgentSet.do.html  mesa_frames.AgentSet.get.html  mesa_frames.AgentSet.inactive_agents.html  mesa_frames.AgentSet.index.html  mesa_frames.AgentSet.model.html  mesa_frames.AgentSet.name.html  mesa_frames.AgentSet.pos.html  mesa_frames.AgentSet.random.html  mesa_frames.AgentSet.remove.html  mesa_frames.AgentSet.rename.html  mesa_frames.AgentSet.select.html  mesa_frames.AgentSet.set.html  mesa_frames.AgentSet.shuffle.html  mesa_frames.AgentSet.sort.html  mesa_frames.AgentSet.space.html  mesa_frames.AgentSet.step.html  mesa_frames.AgentSetRegistry.__add__.html  mesa_frames.AgentSetRegistry.__contains__.html  mesa_frames.AgentSetRegistry.__getitem__.html  mesa_frames.AgentSetRegistry.__iadd__.html  mesa_frames.AgentSetRegistry.__init__.html  mesa_frames.AgentSetRegistry.__isub__.html  (+25 more)
api/reference/space/: index.html  mesa_frames.Grid.__init__.html  mesa_frames.Grid.agents.html  mesa_frames.Grid.copy.html  (+20 more)
benchmarks/: README.md  cli.py  move_to_best_fastpath.py
benchmarks/sugarscape_ig/: README.md  numpy_engine.py  sugarscape_ig_performance.md
changelog/: index.html
contributing/: index.html
development/: index.html
docs/: index.md  requirements.txt
docs/api/: agents.md  conf.py  index.html  index.rst  introduction.md  mesa_frames.html  model.md  requirements.txt  search.js  space.md
docs/general/: changelog.md  contributing.md  index.md  roadmap.md
docs/scripts/: readme_plot.py
docs/source/: conf.py  index.rst
docs/stylesheets/: brand-material.css
examples/: README.md  __init__.py  plotting.py  utils.py
examples/boltzmann_wealth/: README.md  backend_frames.py  backend_mesa.py  performance_plot.py
examples/numba_example/: __init__.py  model.py
examples/sugarscape_ig/: README.md  performance_comparison.py  sugarscape_test.py  test_results.txt
mesa_frames/: OLD_abstract_accessors.py  OLD_abstract_agents.py  __init__.py  _decorator.py  agent.py  ciccio.py  datacollection.py  model.py  space.py  test.py  types.py  types_.py  utils.py
mesa_frames/abstract/: __init__.py  accessors.py  agents.py  agentset.py  agentsetregistry.py  datacollector.py  mixin.py  space.py
mesa_frames/base/: agent.py  model.py
mesa_frames/concrete/: __init__.py  _update_masked.py  accessors.py  agents.py  agentset.py  agentset_pandas.py  agentset_polars.py  agentsetregistry.py  datacollector.py  mixin.py  model.py  space.py
mesa_frames/pandas/: agent.py
mesa_frames/polars/: agent.py
paper/: paper.bib  paper.md
roadmap/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_agent.py  test_agents.py  test_agentset.py  test_agentset_pandas.py  test_agentset_polars.py  test_agentsetregistry.py  test_benchmarks_cli.py  test_datacollector.py  test_grid.py  test_grid_polars.py  test_mixin.py  test_model.py  test_modeldf.py  test_numba_acceleration.py  test_sets_accessor.py  test_sugarscape_mesa_cli.py
tests/pandas/: test_agentset_pandas.py  test_grid_pandas.py  test_mixin_pandas.py
tests/polars/: test_agentset_polars.py  test_grid_polars.py  test_mixin_polars.py
tests/space/: conftest.py  test_cells.py  test_discrete.py  test_grid.py  test_move_to_best.py  test_neighborhood.py  test_space.py  utils.py
tutorials/2_introductory_tutorial/: index.html
tutorials/3_advanced_tutorial/: index.html
tutorials/4_datacollector/: index.html
user-guide/0_getting-started/: index.html
user-guide/1_classes/: index.html
user-guide/2_introductory-tutorial/: index.html
user-guide/3_advanced-tutorial/: index.html
user-guide/4_benchmarks/: index.html
user-guide/4_datacollector/: index.html
user-guide/5_benchmarks/: index.html
(+642 files in other folders)
