[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesa_frames"
description = "An extension to the Mesa framework which uses Polars DataFrames for enhanced performance"
authors = [
  { name = "Project Mesa Team", email = "projectmesa@googlegroups.com" },
  { name = "Adam Amer"},
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "simulation",
    "simulation-environment",
    "gis",
    "simulation-framework",
    "agent-based-modeling",
    "complex-systems",
    "spatial-models",
    "mesa",
    "complexity-analysis",
    "modeling-agents",
    "agent-based-modelling"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "numpy>=2.0.2",
  "typing-extensions>=4.9", #typing-extensions.Self added in 4.9
  "pyarrow",
  ## polars
  "polars>=1.0.0", #polars._typing (see mesa_frames.types) added in 1.0.0
  #"geopolars" (currently in pre-alpha)
]
requires-python = ">=3.9"
dynamic = [
  "version"
]



[project.urls]
Documentation = "https://projectmesa.github.io/mesa-frames"
Repository = "https://github.com/projectmesa/mesa-frames.git"

[project.optional-dependencies]
mkdocs = [
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-include-markdown-plugin"
]

sphinx = [
  "sphinx",
  "sphinx-rtd-theme",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "autodocsumm"
]

docs = [
  "mesa_frames[mkdocs, sphinx]",
  # Readme Script
  "perfplot",
  "seaborn"
]

test = [
  "pytest",
  "pytest-cov",
  "typeguard",
]

dev = [
  "mesa_frames[test, docs]",
  "mesa~=2.3.4",
  "numba>=0.60",
]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.dev] #Allows installing dev as virtual env
features = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["mesa_frames"]

[tool.hatch.version]
path = "mesa_frames/__init__.py"

[tool.ruff.lint]
select = ["D"]
ignore = ["D101", "D102", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D"]
"docs/*" = ["D"]

[tool.uv.sources]
mesa-frames = { workspace = true }

[dependency-groups]
dev = [
    "mesa-frames[dev]",
]

