# ──────────────────────────────────────────────────────────────────────────────
# Build system (unchanged)
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires       = ["hatchling"]
build-backend  = "hatchling.build"


# ──────────────────────────────────────────────────────────────────────────────
# Project metadata (updated dependency versions)
# ──────────────────────────────────────────────────────────────────────────────
[project]
name            = "mesa_frames"
description     = "An extension to the Mesa framework which uses Polars DataFrames for enhanced performance"
authors         = [
  { name = "Project Mesa Team", email = "projectmesa@googlegroups.com" },
  { name = "Adam Amer" },
]
license         = { text = "MIT" }
readme          = "README.md"
keywords        = [
  "simulation", "simulation-environment", "gis", "simulation-framework",
  "agent-based-modeling", "complex-systems", "spatial-models", "mesa",
  "complexity-analysis", "modeling-agents", "agent-based-modelling",
]
classifiers     = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
requires-python = ">=3.11"
dependencies    = [
  "numpy>=2.0.2",
  "pyarrow>=20.0.0",
  # polars._typing added in 1.0.0
  "polars>=1.30.0",
  "psycopg2>=2.9.10",
  "boto3>=1.35.91"
]
dynamic         = ["version"]

[project.urls]
Documentation = "https://projectmesa.github.io/mesa-frames"
Repository    = "https://github.com/projectmesa/mesa-frames.git"


# ──────────────────────────────────────────────────────────────────────────────
# Dependency groups (PEP 735) – local-only, never shipped to PyPI
# ──────────────────────────────────────────────────────────────────────────────
[dependency-groups]

test = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "beartype>=0.21.0",
]

docs = [
  "mkdocs-material>=9.6.14",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-include-markdown-plugin>=7.1.5",
  "sphinx>=7.4.7",
  "sphinx-rtd-theme>=3.0.2",
  "numpydoc>=1.8.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "autodocsumm>=0.2.14",
  "perfplot>=0.10.2",
  "seaborn>=0.13.2",
]

# dev = test ∪ docs ∪ extra tooling
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  "mesa~=2.3.4",
  "numba>=0.60.0",
  "ruff>=0.11.12",
  "pre-commit>=4.2.0",
]


# ──────────────────────────────────────────────────────────────────────────────
# Hatch configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.hatch.version]
path = "mesa_frames/__init__.py"

# Ask Hatch to use uv as the installer everywhere for speed.
[tool.hatch.envs.default]
installer = "uv"

# Testing environment ‒ installs ONLY the "test" group
[tool.hatch.envs.test]
dependencies = [{ include-group = "test" }]

# Docs build environment
[tool.hatch.envs.docs]
dependencies = [{ include-group = "docs" }]

# Dev environment (inherits uv installer)
[tool.hatch.envs.dev]
dependencies = [{ include-group = "dev" }]
env = { MESA_FRAMES_RUNTIME_TYPECHECKING = "true" }

# Wheel build – unchanged
[tool.hatch.build.targets.wheel]
packages = ["mesa_frames"]


# ──────────────────────────────────────────────────────────────────────────────
# uv configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.uv]
# Install the dev stack by default when you run `uv sync`
default-groups = ["dev"]

[tool.uv.sources]
mesa-frames = { workspace = true }


# ──────────────────────────────────────────────────────────────────────────────
# Ruff linter – unchanged
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff.lint]
select = ["D"]
ignore = ["D101", "D102", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*"    = ["D"]
"examples/*" = ["D"]
"docs/*"     = ["D"]
